--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "duc.trinh",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon build/app.js"
+    "start": "node build/app.js",
+    "dev": "nodemon src/app.ts",
+    "postinstall": "tsc"
   },
   "dependencies": {
     "@types/nodemon": "^1.19.2",
@@ -15,8 +17,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
-    "morgan": "^1.10.0",
-    "tsc": "^2.0.4"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
