--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "src/app.ts",
-        "use": "@now/node"
+        "src": "src/app.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
         {
           "src": "/src/(.*)",
-          "dest": "index.js"
+          "dest": "app.js"
         }
       ]
   }
