--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "duc.trinh",
   "license": "MIT",
   "scripts": {
-    "start": "node build/app.js",
+    "start": "tsc && node build/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc"
   },
