--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-    "version": 2,
+  "version": 2,
     "builds": [
       {
-        "src": "src/app.js",
+        "src": "./src/app.ts",
         "use": "@vercel/node"
       }
     ],
     "routes": [
-        {
-          "src": "/src/(.*)",
-          "dest": "app.js"
-        }
-      ]
+      {
+        "src": "/.*",
+        "dest": "app.ts"
+      }
+    ]
   }
