--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "tsc && node build/app.js",
     "dev": "nodemon src/app.ts",
-    "build": "tsc"
+    "build": "rimraf build && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@types/nodemon": "^1.19.2",
@@ -25,6 +28,12 @@
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.18",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^3.0.2",
     "typescript": "^4.8.3"
-  }
+  },
+  "pre-commit": [
+    "ts.check",
+    "build"
+  ]
 }
