--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/nodemon": "^1.19.2",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
     "mongoose-unique-validator": "^3.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-html-parser": "^6.1.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
