--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemon": "^1.19.2",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
@@ -20,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.1",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
