--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "tsc && node build/app.js",
     "dev": "nodemon src/app.ts",
-    "build": "rimraf build && tsc",
+    "build": "tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add build",
     "test": "echo \"Error: no test specified\" && exit 1"
